--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,3 +1,4 @@
+@import './canvas';
 @import './header';
 @import './timeline';
 
@@ -10,6 +11,7 @@
   top: 0;
   left: 0;
   .pl-app-content {
+    display: flex;
     flex-grow: 1;
     border-bottom: 1px solid black;
     background-color: @gray-dark;
