Reorder things and make a sidebar

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,5 +1,10 @@
 @import './canvas';
+@import './footer';
+@import './handle';
 @import './header';
+@import './layers-panel';
+@import './library';
+@import './sidebar';
 @import './timeline';
 
 .pl-app {
