Add some more handles

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -13,11 +13,12 @@
     transform: translateX(-50%);
   }
   .pl-timeline-playhead {
-    cursor: pointer;
+    cursor: ew-resize;
     user-select: none;
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
     &:before, &:after {
       content: '';
       position: absolute;
