--- a/src/components/layers-panel.less
+++ b/src/components/layers-panel.less
@@ -1,5 +1,8 @@
+@import (reference) './sidebar';
+
 .pl-layers-panel {
   flex-shrink: 0;
+  width: @sidebar-width;
   border-right: 1px solid @black-faded;
   position: relative;
 }
