--- a/src/components/sidebar.less
+++ b/src/components/sidebar.less
@@ -1,5 +1,8 @@
+@sidebar-width: 20rem;
+
 .pl-sidebar {
   flex-shrink: 0;
+  width: @sidebar-width;
   border-right: 1px solid @black-faded;
   position: relative;
 }
