--- a/src/components/footer.less
+++ b/src/components/footer.less
@@ -10,6 +10,7 @@
     width: 100%;
     height: @padding-small;
     cursor: row-resize;
+    user-select: none;
     position: absolute;
     top: 0;
     left: 0;
