--- a/src/components/sidebar.less
+++ b/src/components/sidebar.less
@@ -3,6 +3,6 @@
 .pl-sidebar {
   flex-shrink: 0;
   width: @sidebar-width;
-  border-right: 1px solid @black-faded;
+  border-right: 1px solid @gray-darker;
   position: relative;
 }
