--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -2,6 +2,7 @@
 
 .pl-timeline {
   flex-grow: 1;
+  border-top: 1px solid @white-faded;
   position: relative;
   .pl-timeline-marker {
     width: 1px;
