--- a/src/main.less
+++ b/src/main.less
@@ -2,6 +2,8 @@
 @import './components/app';
 
 @gray-dark: lighten(@gray-darker, 10%);
+@white-faded: fade(white, 20%);
+@white-faded-light: fade(white, 5%);
 
 body {
   background-color: @gray-darker;
