--- a/src/components/canvas.less
+++ b/src/components/canvas.less
@@ -16,7 +16,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      &[type="text"] {
+      &.pl-text {
         padding: @padding-smaller;
         margin: @padding-smaller * -1;
         line-height: 1em;
