--- a/src/components/canvas.less
+++ b/src/components/canvas.less
@@ -3,6 +3,8 @@
   flex-grow: 1;
   align-items: center;
   margin: @padding-largest;
+  cursor: default;
+  overflow: hidden;
   .pl-canvas-viewport {
     width: 100%;
     height: 100%;
@@ -18,7 +20,6 @@
       left: 0;
       &.pl-text {
         padding: @padding-smaller;
-        margin: @padding-smaller * -1;
         line-height: 1em;
         background: transparent;
         outline: none;
