--- a/src/components/canvas.less
+++ b/src/components/canvas.less
@@ -36,6 +36,10 @@
         &:not([contenteditable]) {
           cursor: default;
         }
+
+        + .pl-canvas-viewport-layer-handles .pl-canvas-viewport-layer-handle:nth-child(2n) {
+          display: none;
+        }
       }
       .pl-canvas-viewport-layer-handles {
         display: none;
@@ -45,6 +49,28 @@
           background-color: red;
           position: absolute;
           transform: translate(-50%, -50%);
+          top: 0;
+          left: 0;
+          &:nth-child(1), &:nth-child(5) {
+            cursor: nwse-resize;
+          }
+          &:nth-child(2), &:nth-child(6) {
+            cursor: ns-resize;
+            left: 50%;
+          }
+          &:nth-child(3), &:nth-child(7) {
+            cursor: nesw-resize;
+          }
+          &:nth-child(4), &:nth-child(8) {
+            cursor: ew-resize;
+            top: 50%;
+          }
+          &:nth-child(n + 3):nth-child(-n + 5) {
+            left: 100%;
+          }
+          &:nth-child(n + 5):nth-child(-n + 7) {
+            top: 100%;
+          }
         }
       }
     }
