Some more text resizing

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -109,7 +109,7 @@
           border-top-color: @white-faded;
           border-left-color: @white-faded;
           border-radius: @border-radius-small;
-          background-color: @brand-primary;
+          background-color: @gray;
         }
 
         .pl-timeline-layer-track-marker {
