Fire onLayerChange much less frequently

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -113,7 +113,7 @@
         }
 
         .pl-timeline-layer-track-marker {
-          background-color: @black-faded;
+          background-color: @brand-warning;
         }
       }
     }
