--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -12,19 +12,18 @@
   background-color: @gray-dark;
   position: relative;
   .pl-timeline-scrubber .pl-timeline-scrubber-info,
-  .pl-timeline-layers .pl-timeline-layer .pl-timeline-layer-info {
-    flex-shrink: 0;
+  .pl-timeline-layers .pl-timeline-layer-labels {
     width: @sidebar-width;
     border-right: 1px solid @gray-darker;
   }
   .pl-timeline-scrubber .pl-timeline-scrubber-track,
-  .pl-timeline-layers .pl-timeline-layer .pl-timeline-layer-track {
+  .pl-timeline-layer-tracks {
     margin: 0 @padding-small;
   }
-  .pl-timeline-scrubber .pl-timeline-scrubber-track .pl-timeline-scrubber-track-marker,
-  .pl-timeline-layers .pl-timeline-layer .pl-timeline-layer-track .pl-timeline-layer-track-marker {
+  .pl-timeline-marker {
     width: 1px;
     height: 100%;
+    background-color: @brand-warning;
     position: absolute;
     top: 0;
     left: 0;
@@ -49,9 +48,6 @@
     .pl-timeline-scrubber-track {
       flex-grow: 1;
       position: relative;
-      .pl-timeline-scrubber-track-marker {
-        background-color: @brand-warning;
-      }
       .pl-timeline-scrubber-track-playhead {
         cursor: ew-resize;
         position: absolute;
@@ -81,39 +77,28 @@
     }
   }
   .pl-timeline-layers {
+    display: flex;
     flex-grow: 1;
     background-color: fade(black, 20%);
     overflow: auto;
-    .pl-timeline-layer {
-      display:flex;
-      &:hover {
-        background-color: fade(black, 10%);
-      }
-
-      .pl-timeline-layer-info {
-        flex-shrink: 0;
-        padding: @padding-small @padding-base;
-        font-size: @font-size-small;
-        line-height: @padding-base;
-        color: @gray-light;
-      }
+    .pl-timeline-layer-labels .pl-timeline-layer-label {
+      padding: @padding-small @padding-base;
+      font-size: @font-size-small;
+      line-height: @padding-base;
+      color: @gray-light;
+    }
+    .pl-timeline-layer-tracks {
+      flex-grow: 1;
+      position: relative;
       .pl-timeline-layer-track {
-        flex-grow: 1;
-        position: relative;
-        &:before {
-          content: '';
-          display: block;
+        padding: @padding-small 0;
+        .pl-timeline-layer-track-bar {
           height: @padding-base;
-          margin-top: @padding-small;
           border: 1px solid @black-faded;
           border-top-color: @white-faded;
           border-left-color: @white-faded;
           border-radius: @border-radius-small;
           background-color: @gray;
-        }
-
-        .pl-timeline-layer-track-marker {
-          background-color: @brand-warning;
         }
       }
     }
