--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -123,7 +123,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        &:active {
+        &:active, &.pl-selected {
           background-color: @gray;
         }
 
