Allow jump-to-position on the header track

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -36,6 +36,7 @@
     .pl-timeline-header-track {
       flex-grow: 1;
       margin: @timeline-track-padding;
+      cursor: pointer;
       position: relative;
       &:before {
         content: '';
