--- a/src/main.less
+++ b/src/main.less
@@ -1,4 +1,5 @@
 @import '../node_modules/planet-css/lib/main';
+@import './components/button';
 @import './components/icon';
 @import './components/app';
 
