--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -21,16 +21,21 @@
     flex-shrink: 0;
     border-bottom: 1px solid black;
     .pl-timeline-header-status {
+      display: flex;
       padding: @padding-smaller;
       border-right: 1px solid @gray-darker;
       font-family: @font-family-monospace;
-      span {
-        display: block;
-        padding: @padding-smaller @padding-small;
+      .pl-timeline-header-status-indicator {
+        flex-grow: 1;
+        margin-right: @padding-smaller;
+        padding: 0 @padding-small;
         border-radius: @border-radius-small;
         font-family: @font-family-monospace;
-        line-height: 1em;
+        line-height: @padding-larger;
         background-color: @brand-warning;
+      }
+      .pl-timeline-header-status-add {
+        flex-shrink: 0;
       }
     }
     .pl-timeline-header-track {
