--- a/src/main.less
+++ b/src/main.less
@@ -1,11 +1,9 @@
 @import '../node_modules/planet-css/lib/main';
+@import './variables';
+
 @import './components/button';
 @import './components/icon';
 @import './components/app';
-
-@gray-dark: lighten(@gray-darker, 10%);
-@white-faded: fade(white, 20%);
-@white-faded-light: fade(white, 5%);
 
 body {
   background-color: @gray-darker;
