--- a/src/components/sidebar.less
+++ b/src/components/sidebar.less
@@ -1,8 +1,10 @@
 @sidebar-width: 20rem;
 
 .pl-sidebar {
+  display: flex;
+  flex-direction: column;
   flex-shrink: 0;
   width: @sidebar-width;
-  border-right: 1px solid @gray-darker;
+  border-right: 1px solid @black-faded-dark;
   position: relative;
 }
