--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -32,7 +32,7 @@
         border-radius: @border-radius-small;
         font-family: @font-family-monospace;
         line-height: @padding-larger;
-        background-color: @brand-warning;
+        background-color: @gray-lightest;
       }
       .pl-timeline-header-status-add {
         flex-shrink: 0;
