--- a/src/components/inspector.less
+++ b/src/components/inspector.less
@@ -54,27 +54,26 @@
         position: relative;
         &:focus {
           color: @gray-lightest;
-          + span {
+          ~ span {
             opacity: 1;
             transform: scaleX(1);
           }
         }
-
-        + span {
-          width: 100%;
-          height: 1px;
-          background-color: @brand-primary;
-          opacity: 0;
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          transform: scaleX(0);
-          transition: opacity @transition-duration-medium ease-in-out,
-              transform @transition-duration-medium ease-in-out;
-        }
       }
       input[type="number"]::-webkit-inner-spin-button {
         -webkit-appearance: none;
+      }
+      span {
+        width: 100%;
+        height: 1px;
+        background-color: @brand-primary;
+        opacity: 0;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transform: scaleX(0);
+        transition: opacity @transition-duration-medium ease-in-out,
+            transform @transition-duration-medium ease-in-out;
       }
     }
   }
